@@ -1,3 +1,11 @@
+2021-08-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* styfile.c:
+	Add a alias "headings_flag" of the keyword "heading_flag"
+	in style file for compatibility with makeindex.
+	Warn if specifier in style file is unknown.
+	* version.h: Date [28-Aug-2021]
+
 2021-06-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* fwrite.c: Avoid segmentation fault for unwritable fopen.
